--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.8",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
@@ -24,7 +25,9 @@
     "postcss": "^8.1.10",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
-    "tailwindcss": "^2.1.1"
+    "prop-types": "^15.7.2",
+    "tailwindcss": "^2.1.1",
+    "typescript": "^4.2.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
