--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "faker": "^5.5.3",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.27.0",
@@ -25,9 +27,11 @@
     "postcss": "^8.1.10",
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
+    "prisma": "^2.24.1",
     "prop-types": "^15.7.2",
     "tailwindcss": "^2.1.1",
-    "typescript": "^4.2.4"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
