--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
     "@types/node": "^15.12.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.0.4",
