--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
     "@types/node": "^15.12.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.0.4",
@@ -25,6 +23,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "postcss": "^8.1.10",
     "prettier": "^2.3.0",
