--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.24.1",
     "faker": "^5.5.3",
     "next": "latest",
     "react": "^17.0.1",
