--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^3.16.0"
+    "react-query": "^3.16.0",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.8",
