--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@prisma/client": "^2.24.1",
     "faker": "^5.5.3",
     "next": "latest",
+    "next-redux-wrapper": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.16.0",
