--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^15.12.0",
     "@types/react": "^17.0.8",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.27.0",
