--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@prisma/client": "^2.24.1",
     "faker": "^5.5.3",
-    "next": "latest",
+    "next": "^10.2.3",
     "next-redux-wrapper": "^7.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
