--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "redux": "^4.1.0"
   },
   "devDependencies": {
-    "faker": "^5.5.3",
     "@types/react": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
@@ -27,6 +28,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.5.3",
     "jest": "^27.0.4",
     "lint-staged": "^11.0.0",
     "postcss": "^8.1.10",
