--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@prisma/client": "^2.24.1",
-    "next": "latest",
+    "next": "^11.0.0",
     "next-redux-wrapper": "^7.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
@@ -35,7 +35,6 @@
     "prettier": "^2.3.0",
     "pretty-quick": "^3.1.0",
     "prisma": "^2.24.1",
-    "prop-types": "^15.7.2",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.3.2"
   },
