--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.5.2",
+    "joi": "^17.4.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
