--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react-datepicker": "^3.1.8",
     "next": "latest",
     "react": "^17.0.1",
+    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
