--- a/package.json
+++ b/package.json
@@ -5,35 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+
   },
   "dependencies": {
-<<<<<<< HEAD
     "@types/react-datepicker": "^3.1.8",
     "react-datepicker": "^4.1.1",
     "react-query": "^3.17.0",
-=======
-<<<<<<< HEAD
-<<<<<<< HEAD
     "@prisma/client": "^2.24.1",
-=======
-    "@types/react-datepicker": "^3.1.8",
-    "react-datepicker": "^4.1.1",
-    "react-query": "^3.17.0",
->>>>>>> ff1ef16d873f4b967d90a01008ad250cc1d5df89
-=======
->>>>>>> fc962b43b3efd778256dbd5692f535b3bef714ff
->>>>>>> develop
     "next": "^11.0.0",
     "next-redux-wrapper": "^7.0.0",
     "react": "^17.0.2",
-    "react-datepicker": "^4.1.1",
     "react-dom": "^17.0.2",
-<<<<<<< HEAD
-=======
     "react-hook-form": "^7.8.8",
-    "react-query": "^3.17.0",
->>>>>>> develop
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
