--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.5.2",
     "@types/react-datepicker": "^3.1.8",
+    "axios": "^0.21.1",
     "joi": "^17.4.0",
     "next": "^11.0.0",
     "next-redux-wrapper": "^7.0.0",
