fetch query and first code, not OK

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATAAPI_URL="http://localhost:5000"
+DATAAPI_URL=http://localhost:5000
+NEXT_PUBLIC_GET_PROPERTIES=http://localhost:5000/properties
+
