--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "pages/index.js",
     "pages/index.jsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "requests.ts", "testReq.tsx"]
 }
