--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.5.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/react-datepicker": "^3.1.8",
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
